# piclstats

./: .env.example  .gitignore  Dockerfile  alembic.ini  fly.toml  pyproject.toml  render.yaml  start.sh
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_rider_aliases.py  003_conferences_and_courses.py  004_course_loops.py  005_settings_table.py
src/piclstats/: cli.py  config.py  models.py
src/piclstats/db/: engine.py  loader.py  merge.py  seed.py  settings_store.py  tables.py
src/piclstats/scraper/: client.py  parser.py  registry.py
src/piclstats/web/: admin.py  app.py  forecast.py  queries.py
src/piclstats/web/templates/: base.html  course_detail.html  courses.html  forecast.html  home.html  leaderboard.html  rider_detail.html  riders.html  team_detail.html  teams.html
src/piclstats/web/templates/admin/: course_edit.html  courses.html  forecast.html  index.html
