[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piclstats"
version = "0.1.0"
description = "PICL/PAMTB race results scraper and analytics database"
requires-python = ">=3.11"
dependencies = [
    "httpx==0.28.1",
    "sqlalchemy==2.0.40",
    "psycopg[binary]==3.2.6",
    "pydantic-settings==2.8.1",
    "click==8.1.8",
    "alembic==1.15.2",
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    "jinja2==3.1.6",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "ruff==0.11.2",
    "mypy==1.15.0",
]

[project.scripts]
piclstats = "piclstats.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
